Se agrego servicio de Country, con metodos de Insert, Update, Delete, Get, GetAll

--- a/src/PruebaApiSpa.Application/PruebaApiSpa.Application.csproj
+++ b/src/PruebaApiSpa.Application/PruebaApiSpa.Application.csproj
@@ -11,6 +11,10 @@
     <RootNamespace>PruebaApiSpa</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NinjaNye.SearchExtensions" Version="3.0.1" />
+    <PackageReference Include="X.PagedList" Version="8.0.7" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\PruebaApiSpa.Core\PruebaApiSpa.Core.csproj" />
   </ItemGroup>
 </Project>
